[tool.poetry]
name = "streamlit-template"
version = "0.1.0"
description = ""
authors = ["AW"]
license = "Apache 2.0"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11 || 3.11.4"
langchain = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
